k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nlp-toolkit-service
  labels:
    app: nlp-toolkit
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: nlp-toolkit
